# id6

./: Cargo.toml  Dockerfile  LICENSE  README.md  config.toml
src/: bot.rs  db.rs  main.rs  templates.rs
src/db/: mod.rs
src/routes/: error.rs  mod.rs  verify.rs
static/: index.html
templates/: success.html  verify.html
