[package]
name = "id6-web"
version = "0.1.0"
authors = ["Nikhil Jha <hi@nikhiljha.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.2"
actix-files = "0.4.0"
askama = "0.10.3"
actix-cors = "0.4.1"
tokio = "0.2.22"
serenity = "0.9.0-rc.2"
actix-rt = "1.1.1"
postgres = "0.17.5"
tokio-postgres = "0.5.5"
actix = "0.10.0"
uuid = { version = "0.8.1", features = ["v4"] }
toml = "0.5.6"
serde_derive = "1.0.116"
serde = "1.0.116"
derive_more = "0.99.11"
